agrega 1 comentario del camio hecho con sonarq en obtenerRoles y agregar RolDto para la gestión de roles (anteriormente no agregado)